# pi-config

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  entrypoint.sh  package.json  pyproject.toml
agents/: api-documenter.md  bash-expert.md  code-reviewer-guidelines.md  code-reviewer-quality.md  code-reviewer-security.md  debugger.md  docker-expert.md  docs-fetcher.md  frontend-expert.md  git-expert.md  github-expert.md  go-expert.md  java-expert.md  jenkins-expert.md  kubernetes-expert.md  planner.md  python-expert.md  reviewer.md  scout.md  security-auditor.md  technical-documentation-writer.md  test-automator.md  test-runner.md  worker.md
extensions/acpx-provider/: index.ts
extensions/orchestrator/: agents.ts  ask-user.ts  async-agents.ts  async-runner.ts  btw.ts  cron.ts  diff-viewer.ts  diffity.ts  dreaming.ts  enforcement.ts  extended-autocomplete.ts  git-helpers.ts  github-autocomplete.ts  icons.ts  index.ts  nvim.ts  pidash.ts  rules.ts  session-validation.ts  status-line.ts  status.ts  subagent-tool.ts  utils.ts
myk_pi_tools/: __init__.py  cli.py
myk_pi_tools/coderabbit/: __init__.py  approved.py  commands.py  rate_limit.py  utils.py
myk_pi_tools/db/: __init__.py  (+2 more)
prompts/: acpx-prompt.md  coderabbit-rate-limit.md  dream.md  implement-and-review.md  implement.md  pr-review.md  query-db.md  refine-review.md  release.md  remember.md  review-handler.md  review-local.md  scout-and-plan.md
rules/: 00-orchestrator-core.md  05-issue-first-workflow.md  10-agent-routing.md  15-mcp-launchpad.md  20-code-review-loop.md  25-documentation-updates.md  30-prompt-templates.md  35-memory.md  40-critical-rules.md  45-file-preview.md  50-agent-bug-reporting.md
scripts/: docker-safe  httpd.py  pidash-server.ts
tests/: test_memory.py
(+44 files in other folders)
